--- a/railway.yml
+++ b/railway.yml
@@ -1,20 +1,4 @@
-# railway.yml
-services:
-  - name: compressor-bot
-    build:
-      dockerfile: Dockerfile
-    deploy:
-      startCommand: "python3 main.py"
-      restartPolicyType: "ALWAYS"
-    env:
-      - key: APP_ID
-        description: "Telegram API ID from my.telegram.org"
-      - key: API_HASH
-        description: "Telegram API Hash from my.telegram.org"
-      - key: BOT_TOKEN
-        description: "Telegram Bot Token from @BotFather"
-      - key: STRING
-        description: "Optional Telegram session string (leave empty if not used)"
-      - key: LOG_CHANNEL
-        description: "Optional Telegram channel ID for logs (leave empty if not used)"
-    port: 8080
+build:
+  builder: nixpacks
+  buildpacks:
+    - heroku-buildpack-ffmpeg-latest
